# kidneystones

./: .gitignore  Cargo.toml  Config.example.toml  README.md
migrations/: 20230608005257_users_sessions_repos_and_what_not.sql  20230611170154_help_git_not_be_so_ass.sql  20230614035044_support_anonymous_repos.sql
src/: app.rs  config.rs  db.rs  main.rs  models.rs
src/routes/: git.rs  mod.rs  repos.rs
src/web/: mod.rs  routes.rs  templates.rs
templates/: head.hbs  home.hbs  nav.hbs
templates/repos/: create.hbs  view.hbs
web/: package.json  tailwind.config.js  webpack.config.js
web/css/: main.css
web/js/: index.js  utils.js
web/js/modules/: reposCreate.js  signups.js
