[package]
name = "kidney-stones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = [
    "json",
    "query",
    "tokio",
    "http2",
    "headers",
    "multipart",
    "ws",
] }
sqlx = { version = "0.6.2", features = [
    "postgres",
    "migrate",
    "macros",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
    "decimal",
] }
chrono = { version = "0.4.19", features = ["serde"] }
git2 = "0.15.0"
tokio = { version = "1.18.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.137", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0.81", features = ["raw_value"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
anyhow = "1.0.57"
time = "0.3.9"
reqwest = { version = "0.11.10", features = [
    "json",
    "serde_json",
    "deflate",
    "rustls-tls-webpki-roots",
] }
redis = { version = "0.21.5" }
sha2 = "0.10.2"
hex = { version = "0.4.3", features = ["serde"] }
ring = { version = "=0.16.20" }
sha3 = "0.10.1"
bitflags = "1.3.2"
jwt = "0.16.0"
dotenv = "0.15.0"
hmac = "0.12.1"
base16 = "0.2.1"
env_logger = "*"
futures = "*"
libflate = "1.2.0"
futures-util = "0.3.21"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
tower-http = { version = "0.4.0", features = ["trace"] }
rs-snowflake = "0.6.0"
toml = "0.5.9"
once_cell = "1.16.0"
